--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,15 +4,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: 18.x
+
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: 18.x.x
-          cache: npm
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-      - uses: make setup
-      - uses: make start
+      - run: make setup
+      - run: make start
 
-      - uses: make test
-      - uses: make lint
+      - run: make test
+      - run: make lint
